--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url(fontawesome-all.min.css);
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300i,400i");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,300i,400i");
+@import url('https://fonts.googleapis.com/css2?family=Anton');
 
 /*
 	Ethereal by HTML5 UP
@@ -290,10 +291,10 @@ input, select, textarea {
 			}
 
 		}
-
+  
 	body, input, select, textarea {
 		color: rgba(255, 255, 255, 0.75);
-		font-family: "Source Sans Pro", Helvetica, sans-serif;
+		font-family: "Open Sans", Helvetica, sans-serif;
 		font-size: 1rem;
 		font-weight: 300;
 		line-height: 1.65;
@@ -333,11 +334,9 @@ input, select, textarea {
 
 	h1, h2, h3, h4, h5, h6 {
 		color: rgba(255, 255, 255, 0.875);
-		font-family: Arial, Helvetica, sans-serif;
-		font-weight: 700;
+		font-family: "Anton", Helvetica, sans-serif;
 		line-height: 1.3;
 		margin: 0 0 0.75rem 0;
-		letter-spacing: -0.05em;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -617,7 +616,7 @@ input, select, textarea {
 	label {
 		color: rgba(255, 255, 255, 0.875);
 		display: block;
-		font-family: Arial, Helvetica, sans-serif;
+		font-family: 'Open Sans', Helvetica, sans-serif;
 		font-size: 0.8rem;
 		font-weight: 700;
 		margin: 0 0 0.4875rem 0;
@@ -1499,7 +1498,7 @@ input, select, textarea {
 		color: rgba(255, 255, 255, 0.875) !important;
 		cursor: pointer;
 		display: inline-block;
-		font-family: Arial, Helvetica, sans-serif;
+		font-family: 'Open Sans', Helvetica, sans-serif;
 		font-size: 0.6rem;
 		font-weight: 700;
 		height: 2.75rem;
@@ -2195,12 +2194,12 @@ input, select, textarea {
 		}
 
 			.panel > *.color0 {
-				background-image: url("../../images/overlay.png"), linear-gradient(45deg, #726193 20%, #e37b7c 60%, #ffe4b4);
+				background-image: url("../../images/overlay.png"), linear-gradient(45deg, #d53369 0%, #daae51 100%);/*linear-gradient(45deg, #726193 20%, #e37b7c 60%, #ffe4b4);*/
 				background-size: 128px 128px, auto;
 			}
 
 			.panel > *.color1 {
-				background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(114, 97, 147, 0.25) 25%, rgba(227, 123, 124, 0.25) 50%, rgba(255, 228, 180, 0.25));
+				background-image: url("../../images/overlay.png"), linear-gradient(135deg, #4b6cb7 0%, #182848 100%);
 				background-size: 128px 128px, auto;
 				background-color: #726193;
 			}
@@ -3364,7 +3363,7 @@ input, select, textarea {
 			-webkit-flex-basis: auto;
 			-ms-flex-basis: auto;
 			flex-basis: auto;
-			height: 18rem;
+			height: 30rem;
 		}
 
 		.panel.banner.left {
